# Every-Modern-Cipher

./: CIPHERS_AND_MODES.md  CMakeLists.txt  McryptGUI.py  README.md  botan_ciphers.cpp  botan_ciphers.h  cryptopp_brute.cpp  gladman_ciphers.cpp  gladman_ciphers.h  gladman_wrap_crypton.cpp  gladman_wrap_dfc.cpp  gladman_wrap_e2.cpp  gladman_wrap_frog.cpp  gladman_wrap_hpc.cpp  gladman_wrap_magenta.cpp  mcrypt_brute.php  mcrypt_config.json  pycrypto_brute.py  run.bat  standalone_ciphers.cpp  standalone_ciphers.h  standalone_wrap_anubis.cpp  standalone_wrap_clefia.cpp  standalone_wrap_khazad.cpp  standalone_wrap_kuznyechik.cpp  vcpkg.json  xxtea_tool.php
Ciphers/: ascii_zeros_iv_test.txt  ascii_zeros_iv_test_cpp.txt  ascii_zeros_iv_test_py.txt  tg.txt  xxtea_test.txt
cts/: rev1x.txt  test.txt  tg2.txt
gladman/: crypton.c  dfc.c  e2.c  frog.c  hpc.c  magenta.c  std_defs.h
php/: php.ini
standalone/: anubis.c  clefia.c  khazad.c  kuznyechik.h
